# ifoto

./: .gitignore  PROMPT_1_expressive_mode.md  PROMPT_2_editing_suite.md  README.md  audit.md  galleria_optimization_prompt.md  index.html  logs.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.agent/workflows/: performance.md
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/permissions/: commands.toml  test-cmd.toml
src-tauri/src/: commands.rs  db.rs  image_processing.rs  lib.rs  main.rs  scan.rs  thumb.rs  watcher.rs
src/components/: BottomPill.svelte  DateBreak.svelte  DetailView.svelte  FullBleedPreview.svelte  PhotoEditor.svelte  PhotoGrid.svelte  SettingsPanel.svelte  Thumbnail.svelte
src/lib/: ambientColor.ts  lruCache.ts  mosaicLayout.ts  store.ts  thumbnailCache.ts
src/lib/editing/: ColorWheel.svelte  EditingSidebar.svelte  Histogram.svelte  SliderRow.svelte  ToneCurve.svelte  adjustments.ts  imageProcessor.ts
src/lib/editing/panels/: BasicPanel.svelte  CalibrationPanel.svelte  ColorGradingPanel.svelte  DetailPanel.svelte  EffectsPanel.svelte  HSLPanel.svelte  LensPanel.svelte  ToneCurvePanel.svelte
src/lib/editor/: historyStore.ts
