[package]
name = "galleria_expressive"
version = "0.1.0"
description = "Photo and media viewer with Liquid Glass UI"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "galleria_expressive"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync"] }
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
image = "0.25"
rexif = "0.7"
base64 = "0.22"
num_cpus = "1.16"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
notify = "6"
tauri-plugin-updater = "2.0.0-beta.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
